k8strain3/network-网络/traefik/test/url-rewrite/stripprefix-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-foo-path
  namespace: default  # 注意这里的中间件我们定义在default命名空间下面的
spec:
  stripPrefix:
    prefixes:
    - /foo
